--- a/index.html
+++ b/index.html
@@ -1,132 +1,25 @@
 <!DOCTYPE html>
 <html lang="en-AU">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-<title>Jody Graham — Homepage</title>
-<meta name="color-scheme" content="dark" />
-<style>
-  :root{
-    color-scheme: dark;
-    --ink:#fff; --muted:#b8c0cc; --stroke:rgba(255,255,255,.18);
-    --panel:rgba(0,0,0,.72); --veil:rgba(0,0,0,.45);
-    --blue:#0A84FF; --green:#32D74B; --red:#FF453A;
-  }
-  html,body{margin:0;height:100%;overflow:hidden;background:#000;color:var(--ink);
-    font:16px/1.45 -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,system-ui,sans-serif;}
-
-  /* Background image */
-  .bg{position:fixed;inset:0;background:url("assets/hero-jody.jpg") center/cover no-repeat #000;}
-
-  /* Ribbon */
-  .ribbon{position:fixed;top:0;left:0;right:0;height:56px;z-index:40;
-    background:rgba(0,0,0,.30);backdrop-filter:blur(10px);
-    border-bottom:1px solid var(--stroke);display:grid;align-items:center;
-    grid-template-columns:1fr auto 1fr;padding:0 12px;}
-  .brand-gap{justify-self:center;}
-  .nav{display:flex;gap:22px;justify-content:space-evenly;align-items:center;}
-  .nav.right{justify-content:flex-end;gap:16px}
-  .nav a,.nav button{appearance:none;border:0;background:none;color:#fff;text-decoration:none;cursor:pointer}
-  .nav .link{white-space:nowrap;opacity:.95}
-  .nav .link.active{color:var(--blue);font-weight:600}
-
-  /* Submenus (3 placeholders each) */
-  .nav-item{position:relative}
-  .submenu{position:absolute;top:100%;left:0;min-width:200px;display:none;
-    background:var(--panel);backdrop-filter:blur(10px);border:1px solid var(--stroke);
-    border-radius:12px;padding:8px;z-index:55}
-  .submenu a{display:block;padding:8px 10px;border-radius:8px;color:#fff;text-decoration:none}
-  .submenu a:hover{background:rgba(255,255,255,.08)}
-  .nav-item.open>.submenu{display:block}
-  @media (hover:hover){ .nav-item:hover>.submenu{display:block} }
-
-  /* Pills (logged-out right side) */
-  .pill{padding:8px 12px;border-radius:999px;background:rgba(255,255,255,.08);border:1px solid var(--stroke)}
-  .pill.green{background:rgba(50,215,75,.20)}
-  .pill.blue{background:rgba(10,132,255,.20)}
-
-  /* iOS-like avatar chip (no outline) */
-  .chip{display:flex;align-items:center;gap:8px;padding:6px 10px;border-radius:999px;
-    background:rgba(255,255,255,.10);backdrop-filter:blur(6px)}
-  .avatar{width:28px;height:28px;border-radius:50%;overflow:hidden;display:grid;place-items:center;background:rgba(255,255,255,.15);font-weight:700}
-  .avatar img{width:100%;height:100%;object-fit:cover;display:block}
-  .name{font-weight:600;color:var(--blue);white-space:nowrap}
-
-  /* Small icon button */
-  .iconbtn{width:36px;height:36px;border-radius:10px;background:rgba(255,255,255,.08);
-    border:1px solid var(--stroke);display:grid;place-items:center}
-  .icon{width:18px;height:18px;display:block;fill:#fff;opacity:.95}
-
-  /* Popover under avatar */
-  .account-pop{position:absolute;top:44px;right:0;min-width:240px;display:none;
-    background:var(--panel);border:1px solid var(--stroke);border-radius:14px;padding:8px;z-index:60}
-  .account-pop.open{display:block}
-  .account-pop .item{padding:10px 12px;border-radius:10px;cursor:pointer}
-  .account-pop .item:hover{background:rgba(255,255,255,.08)}
-  .account-pop .item.red{background:rgba(255,69,58,.18)}
-  .account-pop .hint{float:right;opacity:.8;font-size:.85em}
-
-  /* Modal base */
-  .backdrop{position:fixed;inset:0;display:none;z-index:70}
-  .backdrop.open{display:block}
-  .veil{position:absolute;inset:0;background:var(--veil)}
-  .card{position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);
-    width:min(92vw,440px);background:rgba(0,0,0,.30);border:1px solid var(--stroke);
-    border-radius:16px;backdrop-filter:blur(10px);padding:18px}
-  .card h2{margin:0 0 10px}
-  .field{margin:10px 0 12px}
-  .label{display:block;font-size:.9rem;color:var(--muted);margin:0 0 6px}
-  .inputwrap{position:relative}
-  .input{width:100%;padding:12px 44px 12px 12px;border-radius:12px;border:1px solid var(--stroke);
-    background:rgba(0,0,0,.35);color:#fff}
-  .showpass{position:absolute;right:6px;top:6px;width:32px;height:32px;border-radius:8px;
-    background:rgba(255,255,255,.08);border:1px solid var(--stroke);color:#fff;cursor:pointer}
-  .row{display:flex;gap:10px}
-  .row .field{flex:1}
-  .actions{display:grid;gap:10px;margin-top:12px}
-  .btn{border-radius:12px;padding:12px 14px;border:1px solid var(--stroke);background:#111;color:#fff;cursor:pointer}
-  .btn.primary{background:var(--blue);border-color:transparent}
-  .btn.success{background:var(--green);border-color:transparent}
-  .btn.danger{background:var(--red);border-color:transparent}
-  .btn.ghost{background:rgba(255,255,255,.08)}
-
-  /* NEXT CLASS overlay */
-  .class-wrap{position:fixed;inset:0;display:none;z-index:76}
-  .class-wrap.open{display:block}
-  .class-card{position:absolute;left:50%;top:58px;transform:translateX(-50%);
-    width:min(96vw,980px);background:var(--panel);border:1px solid var(--stroke);
-    border-radius:16px;backdrop-filter:blur(10px);overflow:hidden}
-  .class-header{display:flex;justify-content:space-between;align-items:center;padding:12px;border-bottom:1px solid var(--stroke)}
-  .video-hero{position:relative;background:#000}
-  .video-hero video{display:block;width:100%;height:360px;background:#000}
-  .video-controls{position:absolute;right:10px;bottom:10px;display:flex;gap:8px}
-  .mini-btn{padding:8px 10px;border-radius:10px;background:rgba(255,255,255,.12);border:1px solid var(--stroke)}
-  .class-body{display:grid;gap:10px;padding:12px}
-  .meta{display:flex;flex-wrap:wrap;gap:14px;color:var(--muted)}
-  .enrolled{display:flex;align-items:center;gap:8px}
-  .stack{display:flex}
-  .stack .avatar{width:26px;height:26px;border:2px solid #000;margin-left:-8px}
-  .stack .avatar:first-child{margin-left:0}
-  .people-list{display:none;border-top:1px solid var(--stroke);padding-top:10px}
-  .people-list.open{display:block}
-
-  /* Floating mini-player (draggable) */
-  .pip{position:fixed;right:16px;bottom:16px;width:320px;background:#000;border:1px solid var(--stroke);border-radius:12px;display:none;z-index:77}
-  .pip header{display:flex;justify-content:space-between;align-items:center;padding:6px 8px;background:rgba(255,255,255,.06)}
-  .pip video{width:100%;height:180px;background:#000;display:block}
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <title>Jody Graham — Homepage</title>
+  <meta name="color-scheme" content="dark" />
+  <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
+  <!-- Fullscreen hero image (no scroll/bars) -->
   <div class="bg" aria-hidden="true"></div>
 
-  <!-- RIBBON -->
+  <!-- Ribbon -->
   <header class="ribbon" role="navigation" aria-label="Primary">
     <!-- Left nav (evenly spaced with submenus) -->
     <nav class="nav left" id="nav-left"></nav>
 
-    <div class="brand-gap"></div> <!-- balances grid -->
+    <!-- spacer keeps the grid visually balanced -->
+    <div class="brand-gap"></div>
 
-    <!-- Right side -->
+    <!-- Right side (login/signup OR notifications/next class/avatar) -->
     <nav class="nav right" id="nav-right"></nav>
   </header>
 
@@ -223,200 +116,6 @@
     </div>
   </div>
 
-<script>
-/* ======= State ======= */
-const isLoggedIn = () => sessionStorage.getItem('AUTH')==='1';
-const setLoggedIn = v => sessionStorage.setItem('AUTH', v?'1':'0');
-const getUser = () => JSON.parse(localStorage.getItem('USER')||'{}');
-const setUser = u => localStorage.setItem('USER', JSON.stringify(u));
-
-/* ======= Ribbon build ======= */
-const left = document.getElementById('nav-left');
-const right = document.getElementById('nav-right');
-
-function buildLeftNav(){
-  left.innerHTML = '';
-  const items = ['Home','Courses','Classes','Online Content','Prices'];
-  items.forEach((label, idx)=>{
-    const it = document.createElement('div'); it.className='nav-item';
-    const a = document.createElement('a'); a.href='#'; a.className='link'+(idx===0?' active':''); a.textContent=label;
-    it.appendChild(a);
-    const sm = document.createElement('div'); sm.className='submenu';
-    sm.innerHTML = `<a href="#">Placeholder 1</a><a href="#">Placeholder 2</a><a href="#">Placeholder 3</a>`;
-    it.appendChild(sm); left.appendChild(it);
-    a.addEventListener('click', (e)=>{ e.preventDefault();
-      const open = it.classList.contains('open');
-      document.querySelectorAll('.nav-item').forEach(n=>n.classList.remove('open'));
-      it.classList.toggle('open', !open);
-    });
-  });
-  document.addEventListener('click', e=>{
-    if(!e.target.closest('.nav-item')) document.querySelectorAll('.nav-item').forEach(n=>n.classList.remove('open'));
-  });
-}
-
-function svg(pathD){
-  const s = document.createElementNS('http://www.w3.org/2000/svg','svg');
-  s.setAttribute('viewBox','0 0 24 24'); s.classList.add('icon');
-  const p = document.createElementNS('http://www.w3.org/2000/svg','path'); p.setAttribute('d', pathD);
-  s.appendChild(p); return s;
-}
-
-function buildRightNav(){
-  right.innerHTML='';
-  if(!isLoggedIn()){
-    const login = Object.assign(document.createElement('a'),{className:'pill green',textContent:'Login'});
-    const signup= Object.assign(document.createElement('a'),{className:'pill blue',textContent:'Sign up'});
-    login.onclick=()=> openModal('login-modal');
-    signup.onclick=()=> openModal('signup-modal');
-    right.append(login,signup);
-    return;
-  }
-  // Notifications
-  const bell = Object.assign(document.createElement('button'),{className:'iconbtn',title:'Notifications'});
-  bell.appendChild(svg('M12 22a2 2 0 0 0 2-2H10a2 2 0 0 0 2 2zm6-6V11a6 6 0 1 0-12 0v5l-2 2v1h16v-1l-2-2z'));
-  bell.onclick=()=> alert('Notifications placeholder');
-
-  // Next class
-  const next = Object.assign(document.createElement('button'),{className:'iconbtn',title:'Next class'});
-  next.appendChild(svg('M8 7V3h8v4m5 4H3m2 10h14a2 2 0 0 0 2-2V7H3v12a2 2 0 0 0 2 2z'));
-  next.onclick=()=> openClass();
-
-  // Avatar chip
-  const wrap = Object.assign(document.createElement('div'),{style:'position:relative'});
-  const chip = Object.assign(document.createElement('button'),{className:'chip',type:'button'});
-  const av = Object.assign(document.createElement('div'),{className:'avatar'});
-  const u = getUser();
-  if(u.avatar){ const img=new Image(); img.src=u.avatar; av.appendChild(img); } else { av.textContent=(u.name?.[0]||'?').toUpperCase(); }
-  const nm = Object.assign(document.createElement('span'),{className:'name',textContent:u.name||'Profile'});
-  chip.append(av,nm);
-  const pop = Object.assign(document.createElement('div'),{className:'account-pop'});
-  pop.innerHTML = `
-    <div class="item" data-act="profile">Profile</div>
-    <div class="item" data-act="subscription">Subscription <span class="hint">${u.subLevel||'Free'}</span></div>
-    <div class="item" data-act="training">Enrolled training</div>
-    <div class="item red" data-act="logout">Log out</div>`;
-  wrap.append(chip,pop);
-
-  chip.onclick=(e)=>{ e.stopPropagation(); pop.classList.toggle('open'); };
-  document.addEventListener('click',e=>{ if(!e.target.closest('.account-pop') && !e.target.closest('.chip')) pop.classList.remove('open'); });
-  pop.onclick=(e)=>{
-    const act=e.target.closest('.item')?.dataset.act; if(!act) return; pop.classList.remove('open');
-    if(act==='profile') openProfile();
-    if(act==='subscription') openSub();
-    if(act==='training') alert('Training placeholder');
-    if(act==='logout') openModal('logout-modal');
-  };
-
-  right.append(bell,next,wrap);
-}
-
-/* ======= Modal helpers ======= */
-function openModal(id){ const el=document.getElementById(id); el.classList.add('open'); el.setAttribute('aria-hidden','false'); }
-function closeModal(id){ const el=document.getElementById(id); el.classList.remove('open'); el.setAttribute('aria-hidden','true'); }
-function closeAll(){ ['login-modal','signup-modal','profile-modal','logout-modal'].forEach(closeModal); }
-document.querySelectorAll('.backdrop .veil').forEach(v=> v.addEventListener('click', closeAll));
-document.addEventListener('keydown', e=>{ if(e.key==='Escape'){ closeAll(); closeClass(); }});
-
-/* Show/hide password buttons */
-document.querySelectorAll('.showpass').forEach(btn=>{
-  btn.addEventListener('click', ()=>{
-    const id = btn.getAttribute('data-for'); const input = document.getElementById(id);
-    input.type = input.type === 'password' ? 'text' : 'password';
-  });
-});
-
-/* ======= Auth click-through ======= */
-document.getElementById('li-submit').onclick=()=>{
-  setLoggedIn(true);
-  const email = document.getElementById('li-user').value||'user@example.com';
-  const name = email.split('@')[0];
-  const u = getUser();
-  setUser({ ...u, name: u.name || name.charAt(0).toUpperCase()+name.slice(1), email, subLevel: u.subLevel || 'Free' });
-  closeModal('login-modal'); buildRightNav();
-};
-document.getElementById('li-cancel').onclick=()=> closeModal('login-modal');
-
-document.getElementById('su-submit').onclick=()=>{
-  const first=document.getElementById('su-first').value||'New';
-  const last=document.getElementById('su-last').value||'User';
-  const email=document.getElementById('su-email').value||'user@example.com';
-  setLoggedIn(true); setUser({name:`${first} ${last}`.trim(), email, subLevel:'Free'});
-  closeModal('signup-modal'); buildRightNav();
-};
-document.getElementById('su-cancel').onclick=()=> closeModal('signup-modal');
-
-document.getElementById('lo-yes').onclick=()=>{ setLoggedIn(false); setUser({}); closeModal('logout-modal'); buildRightNav(); };
-document.getElementById('lo-no').onclick=()=> closeModal('logout-modal');
-
-/* ======= Profile ======= */
-function openProfile(){
-  const u=getUser();
-  document.getElementById('pr-name').value = u.name||'';
-  document.getElementById('pr-email').value= u.email||'';
-  openModal('profile-modal');
-}
-document.getElementById('pr-save').onclick=()=>{
-  const u=getUser();
-  u.name=document.getElementById('pr-name').value||u.name||'User';
-  u.email=document.getElementById('pr-email').value||u.email||'';
-  setUser(u); closeModal('profile-modal'); buildRightNav();
-};
-document.getElementById('pr-cancel').onclick=()=> closeModal('profile-modal');
-document.getElementById('avatar-upload').addEventListener('change', e=>{
-  const f=e.target.files[0]; if(!f) return;
-  const r=new FileReader(); r.onload=ev=>{ const u=getUser(); u.avatar=ev.target.result; setUser(u); buildRightNav(); };
-  r.readAsDataURL(f);
-});
-
-/* ======= Next Class (card + mini-player) ======= */
-const classWrap=document.getElementById('class-wrap');
-const hero=document.getElementById('class-video');
-const pip=document.getElementById('pip');
-const pipVid=document.getElementById('pip-video');
-document.getElementById('class-close').onclick=()=> closeClass();
-document.getElementById('to-full').onclick=()=> hero.requestFullscreen?.();
-document.getElementById('to-pip').onclick=()=> openPip();
-document.getElementById('pip-close').onclick=()=> pip.style.display='none';
-document.getElementById('pip-back').onclick=()=>{ pip.style.display='none'; classWrap.classList.add('open'); };
-
-function openClass(){ classWrap.classList.add('open'); }
-function closeClass(){ classWrap.classList.remove('open'); }
-function openPip(){ pipVid.src=''; pipVid.removeAttribute('src'); pip.style.display='block'; classWrap.classList.remove('open'); }
-/* Draggable PiP */
-(function(){
-  const handle=document.getElementById('pip-drag');
-  let ox=0, oy=0, drag=false;
-  handle.addEventListener('mousedown',e=>{ drag=true; ox=e.clientX-pip.offsetLeft; oy=e.clientY-pip.offsetTop; e.preventDefault();});
-  window.addEventListener('mousemove',e=>{ if(!drag) return; pip.style.left=(e.clientX-ox)+'px'; pip.style.top=(e.clientY-oy)+'px'; pip.style.right='auto'; pip.style.bottom='auto';});
-  window.addEventListener('mouseup',()=> drag=false);
-})();
-/* Enrolled avatars (demo) */
-const stack=document.getElementById('enrolled-stack');
-const list=document.getElementById('people-list');
-const demoPeople=['Alex','Ben','Casey','Dana','Eli','Fran','Gus'].map(n=>({name:n}));
-function renderPeople(){
-  stack.innerHTML=''; list.innerHTML='';
-  demoPeople.forEach(p=>{
-    const a=document.createElement('div'); a.className='avatar'; a.textContent=p.name[0]; stack.appendChild(a);
-    const row=document.createElement('div'); row.style.padding='6px 0'; row.textContent=p.name; list.appendChild(row);
-  });
-}
-renderPeople();
-document.getElementById('see-people').onclick=()=> list.classList.toggle('open');
-
-/* ======= Subscriptions ======= */
-function openSub(){ openModal('sub-modal'); document.getElementById('sub-level').textContent=getUser().subLevel||'Free'; }
-document.querySelectorAll('#signup-modal .showpass, #login-modal .showpass').forEach(()=>{});
-document.querySelectorAll('#sub-modal [data-level]').forEach(b=> b.addEventListener('click',()=>{
-  const level=b.getAttribute('data-level'); const u=getUser(); u.subLevel=level; setUser(u);
-  document.getElementById('sub-level').textContent=level;
-  document.getElementById('hint-sub')?.textContent=level;
-}));
-
-/* ======= Init ======= */
-buildLeftNav();
-buildRightNav();
-</script>
+  <script src="assets/app.js" defer></script>
 </body>
 </html>
